# flight-deley--prediction

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/: settings.local.json
modules/: data_loader.py  evaluation.py
notebooks/: 1-EDA_exploratorio.ipynb  2-ETL.ipynb  2-limpeza.ipynb  3-EDA_clean.ipynb  4-modelagem_nao_supervisionada.ipynb  5-modelagem_supervisionada.ipynb  6-apresentacao.ipynb  6-conclusoes.ipynb  eda_flights.ipynb  fly.ipynb
notebooks/.ipynb_checkpoints/: eda_flights-checkpoint.ipynb
plan/: dic_data.md  ep.md  external_data.md  tech_challenge.md
plan/outputs/: airlines_head.txt  airports_head.txt  flights_head.txt  flights_joined.txt
src/data_analisys/: flights_drops.py  main.py
