[project]
name = "flight-delay-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pyarrow>=19.0",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.0",
    "ipykernel>=6.29",
    "pandas>=3.0.1",
    "numpy>=2.4.3",
    "matplotlib>=3.10.8",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "xgboost>=2.1",
    "lightgbm>=4.5",
    "plotly>=6.0",
]
